<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Registro.documentos_conductor.MainCapturaIne">

    <ScrollView
        android:id="@+id/scroll_view_ine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/todo_ine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_retroceso_ine"
                    android:layout_width="@dimen/width_img_retroceso"
                    android:layout_height="@dimen/heigth_img_retroceso"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/flecha_retroceso" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/imagenes"
                    android:src="@drawable/cuadros"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt1_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/txt_text1_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_head_capture" />

            <TextView
                android:id="@+id/text2_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text2_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_head2_capture" />

            <TextView
                android:id="@+id/text3_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text3_identificación"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />

            <TextView
                android:id="@+id/text4_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text4_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />

            <TextView
                android:id="@+id/text5_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text5_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />

            <TextView
                android:id="@+id/text6_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text6_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />

            <TextView
                android:id="@+id/text7_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text7_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />

            <TextView
                android:id="@+id/text8_ine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/txt_text8_identificacion"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_body_capture" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imagenes_licencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_frontal_ine"
                    android:layout_width="@dimen/width_img_camera"
                    android:layout_height="@dimen/heigth_img_camara"
                    android:layout_marginStart="@dimen/margin_img_camara_border"
                    android:layout_marginTop="@dimen/margin_img_camra_top"
                    android:background="@color/fondo_captura_img"
                    android:contentDescription="@string/imagenes"
                    android:onClick="tomarFoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

                <ImageButton
                    android:id="@+id/btn_reverso_ine"
                    android:layout_width="@dimen/width_img_camera"
                    android:layout_height="@dimen/heigth_img_camara"
                    android:layout_marginTop="@dimen/margin_img_camra_top"
                    android:layout_marginEnd="@dimen/margin_img_camara_border"
                    android:background="@color/fondo_captura_img"
                    android:contentDescription="@string/imagenes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

                <TextView
                    android:id="@+id/txt_frontal_licencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/img_txt_frontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_body_capture"
                    app:layout_constraintBottom_toTopOf="@+id/btn_frontal_ine"
                    app:layout_constraintStart_toStartOf="@+id/btn_frontal_ine" />

                <TextView
                    android:id="@+id/txt_reverso_licencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/img_txt_reverso"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_body_capture"
                    app:layout_constraintBottom_toTopOf="@+id/btn_reverso_ine"
                    app:layout_constraintStart_toStartOf="@+id/btn_reverso_ine" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_guardar_ine"
                android:layout_width="@dimen/width_boton"
                android:layout_height="@dimen/heigth_boton"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/boton_redondo"
                android:onClick="guardar_ine"
                android:text="@string/btn_text_guardar"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_btn" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>